<resources>
    <string name="app_name">Wizeline Project</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="title">Titulo</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="rate">Calificación</string>

    <string name="user_label">Correo</string>
    <string name="password_label">Contraseña</string>

    <string name="latest_movie">Última pelicula</string>
    <string name="top_rated_movie">Más valoradas</string>
    <string name="now_playing_movie">En reproducción</string>

    <string name="register_account">Registrate!!</string>
    <string name="register_button">Resgistrar</string>
    <string name="subtitle_register_screen">Completa los datos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>